--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "docker-node-boilerplate-basic",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon index",
-    "start": "node index"
+    "dev": "nodemon src/index",
+    "start": "node src/index"
   },
   "keywords": [],
   "author": "Gustavo Morales",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4"
+  },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "dotenv": "^6.2.0",
+    "nodemon": "^1.18.9",
+    "prettier": "^1.15.3"
   }
 }
