--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "docker-node-boilerplate-basic",
+  "name": "feed-functions",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "node src/index",
     "dev": "nodemon src/index",
-    "start": "node src/index"
+    "prettier": "prettier --write 'src/*.js' 'tests/*.js'",
+    "lint": "prettier --list-different 'src/*.js' 'tests/*.js'",
+    "ci": "npm run lint --silent && jest",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "Gustavo Morales",
-  "license": "ISC",
+  "author": "Karl Hughes",
   "dependencies": {
     "express": "^4.16.4"
   },
   "devDependencies": {
     "dotenv": "^6.2.0",
+    "got": "^9.6.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3"
   }
