--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "author": "Karl Hughes",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "express-logging": "^1.1.1",
+    "logops": "^2.1.0",
+    "rss-to-email": "^0.8.0"
   },
   "devDependencies": {
     "dotenv": "^6.2.0",
