--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.16.4",
     "express-logging": "^1.1.1",
     "logops": "^2.1.0",
-    "rss-to-email": "^0.8.0"
+    "node-fetch": "^2.3.0",
+    "rss-to-email": "^0.8.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "dotenv": "^6.2.0",
